bppackaging/src/objects/CO_Deposit__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Deposits</relationshipLabel>
        <relationshipName>CO_Deposits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>CO Deposits</relationshipLabel>
        <relationshipName>CO_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giftcard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge on Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reverse_Link__c</fullName>
        <label>Reverse Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CO Deposit</label>
    <nameField>
        <displayFormat>CODN-{00000000}</displayFormat>
        <label>CO Deposits Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>